<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jruby.rails</groupId>
  <artifactId>activerecord-jdbc</artifactId>
  <packaging>jar</packaging>
  <version>IDE-SNAPSHOT</version>
  <name>activerecord-jdbc</name>
  <description>
    This POM for ActiveRecord-JDBC is just for bootstrapping IDEs.
  </description>
  <url>http://github.com/jruby/activerecord-jdbc-adapter/wiki</url>

  <properties>
    <jruby.version>9.2.6.0</jruby.version>
  </properties>

  <issueManagement>
    <system>GitHub</system>
    <url>http://github.com/jruby/activerecord-jdbc-adapter/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git://github.com/jruby/activerecord-jdbc-adapter.git</connection>
    <developerConnection>scm:git:git@github.com:jruby/activerecord-jdbc-adapter.git</developerConnection>
    <url>https://github.com/jruby/activerecord-jdbc-adapter</url>
  </scm>

  <licenses>
    <license>
      <name>BSD</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <!--
  <repositories>
    <repository>
      <id>codehaus</id>
      <name>Codehaus Repository</name>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>http://repository.codehaus.org</url>
    </repository>
  </repositories>-->

  <developers>
    <developer>
      <id>nicksieger</id>
      <name>Nick Sieger</name>
      <email>nicksieger@gmail.com</email>
    </developer>
    <developer>
      <id>kares</id>
      <name>Karol Bucek</name>
      <email>self@kares.org</email>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby-complete</artifactId>
      <version>${jruby.version}</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.1.4</version>
    </dependency>
  </dependencies>

  <build>

    <sourceDirectory>src/java</sourceDirectory>
    <resources>
        <resource>
            <directory>lib</directory>
        </resource>
    </resources>
    <!--
    <testSourceDirectory>test/java</testSourceDirectory>-->
    <testResources>
        <testResource>
            <directory>test</directory>
        </testResource>
    </testResources>

    <outputDirectory>pkg/classes</outputDirectory>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
    </plugins>

  </build>

</project>
